--- a/AdGuardHome/files/AdGuardHome.yaml
+++ b/AdGuardHome/files/AdGuardHome.yaml
@@ -70,7 +70,7 @@ dns:
   upstream_timeout: 10s
   local_domain_name: lan
   resolve_clients: false
-  use_private_ptr_resolvers: false
+  use_private_ptr_resolvers: true
   local_ptr_upstreams: []
 tls:
   enabled: false
