--- a/AdGuardHome/files/AdGuardHome.yaml
+++ b/AdGuardHome/files/AdGuardHome.yaml
@@ -17,7 +17,7 @@ dns:
   statistics_interval: 1
   querylog_enabled: true
   querylog_file_enabled: true
-  querylog_interval: 90
+  querylog_interval: 2160h
   querylog_size_memory: 1000
   anonymize_client_ip: false
   protection_enabled: true
@@ -130,4 +130,4 @@ os:
   group: ""
   user: ""
   rlimit_nofile: 0
-schema_version: 11
+schema_version: 12
